--- a/ArticlesOnHate.ipynb
+++ b/ArticlesOnHate.ipynb
@@ -431,6 +431,87 @@
     "        # Insert a line break after each article\n",
     "        text_file.write('\\n\\n')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's move on to The Guardian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'ResultSet' object has no attribute 'strip'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-f1e34c13de18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mthetext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstarch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'div'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mitemprop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'articleBody'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthetext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m '''\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'ResultSet' object has no attribute 'strip'"
+     ]
+    }
+   ],
+   "source": [
+    "guardrss = feedparser.parse(\n",
+    "    'https://www.theguardian.com/society/hate-crime/rss')\n",
+    "\n",
+    "res = requests.get(guardrss['entries'][0]['link'])\n",
+    "res.raise_for_status()\n",
+    "starch = bs4.BeautifulSoup(res.text, 'html5lib')\n",
+    "# The below is specific to the NYT\n",
+    "thetext = starch.find_all('div', itemprop='articleBody')\n",
+    "\n",
+    "with open(\"Output.txt\", \"a\") as text_file:\n",
+    "        for tag in thetext:\n",
+    "            text_file.write(tag.text.strip())\n",
+    "            text_file.write(' ')\n",
+    "\n",
+    "        # Insert a line break after each article\n",
+    "        text_file.write('\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-20608ae9d19d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnytrss\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'entries'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'link'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_for_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mstarch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbs4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBeautifulSoup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'html5lib'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "# Guardian feed on hate crime\n",
+    "guardrss = feedparser.parse(\n",
+    "    'https://www.theguardian.com/society/hate-crime/rss')\n",
+    "\n",
+    "for i in range(20):\n",
+    "    res = requests.get(guardrss['entries'][i]['link'])\n",
+    "    res.raise_for_status()\n",
+    "    starch = bs4.BeautifulSoup(res.text, 'html5lib')\n",
+    "    # The below is specific to The Guardian\n",
+    "    thetext = starch.find_all('div', itemprop='articleBody')\n",
+    "\n",
+    "    with open(\"Output.txt\", \"a\") as text_file:\n",
+    "        for tag in thetext:\n",
+    "            text_file.write(tag.text.strip())\n",
+    "            text_file.write(' ')\n",
+    "\n",
+    "        # Insert a line break after each article\n",
+    "        text_file.write('\\n\\n')\n"
+   ]
   }
  ],
  "metadata": {
