--- a/ArticlesOnHate.ipynb
+++ b/ArticlesOnHate.ipynb
@@ -491,6 +491,35 @@
     "        # Insert a line break after each article\n",
     "        text_file.write('\\n\\n')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Guardian feed on UK news\n",
+    "guardrss = feedparser.parse(\n",
+    "    'https://www.theguardian.com/uk-news/rss')\n",
+    "\n",
+    "for i in range(20):\n",
+    "    res = requests.get(guardrss['entries'][i]['link'])\n",
+    "    res.raise_for_status()\n",
+    "    starch = bs4.BeautifulSoup(res.text, 'html5lib')\n",
+    "    # The below is specific to The Guardian\n",
+    "    thetext = starch.find_all('div', itemprop='articleBody')\n",
+    "\n",
+    "    with open(\"Output.txt\", \"a\") as text_file:\n",
+    "        for tag in thetext:\n",
+    "            string = tag.text.strip()\n",
+    "            string = string.replace('\\r', ' ').replace('\\n', ' ')\n",
+    "            text_file.write(string)\n",
+    "\n",
+    "        # Insert a line break after each article\n",
+    "        text_file.write('\\n\\n')\n"
+   ]
   }
  ],
  "metadata": {
