--- a/ArticlesOnHate.ipynb
+++ b/ArticlesOnHate.ipynb
@@ -63,13 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import feedparser"
+    "import feedparser\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -366,6 +367,7 @@
     "import requests\n",
     "import bs4\n",
     "import feedparser\n",
+    "import pandas as pd\n",
     "\n",
     "# NY Times Hate Crimes feed\n",
     "nytrss = feedparser.parse(\n",
@@ -441,36 +443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scrape one article, before moving on to whole feed\n",
-    "guardrss = feedparser.parse(\n",
-    "    'https://www.theguardian.com/society/hate-crime/rss')\n",
-    "\n",
-    "res = requests.get(guardrss['entries'][0]['link'])\n",
-    "res.raise_for_status()\n",
-    "starch = bs4.BeautifulSoup(res.text, 'html5lib')\n",
-    "# The below is specific to The Guardian\n",
-    "thetext = starch.find_all('div', itemprop='articleBody')\n",
-    "\n",
-    "with open(\"Output.txt\", \"a\") as text_file:\n",
-    "        for tag in thetext:\n",
-    "            string = tag.text.strip()\n",
-    "            string = string.replace('\\r', ' ').replace('\\n', ' ')\n",
-    "            text_file.write(string)\n",
-    "\n",
-    "        # Insert a line break after each article\n",
-    "        # text_file.write('\\n\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%%time\n",
     "# Guardian feed on hate crime\n",
     "guardrss = feedparser.parse(\n",
     "    'https://www.theguardian.com/society/hate-crime/rss')\n",
@@ -519,6 +496,370 @@
     "\n",
     "        # Insert a line break after each article\n",
     "        text_file.write('\\n\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ABC News"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# ABC News feed on hate crime\n",
+    "guardrss = feedparser.parse(\n",
+    "    'http://abcnews.go.com/topics/urss?pageid=883548')\n",
+    "\n",
+    "    res = requests.get(guardrss['entries'][i]['link'])\n",
+    "    res.raise_for_status()\n",
+    "    starch = bs4.BeautifulSoup(res.text, 'html5lib')\n",
+    "    # The below is specific to The Guardian\n",
+    "    thetext = starch.find_all('div', itemprop='articleBody')\n",
+    "\n",
+    "    '''\n",
+    "    with open(\"Output.txt\", \"a\") as text_file:\n",
+    "        for tag in thetext:\n",
+    "            string = tag.text.strip()\n",
+    "            string = string.replace('\\r', ' ').replace('\\n', ' ')\n",
+    "            text_file.write(string)\n",
+    "\n",
+    "        # Insert a line break after each article\n",
+    "        text_file.write('\\n\\n')\n",
+    "        '''\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's convert these to a CSV, with three columns:\n",
+    "\n",
+    "ID, text, label\n",
+    "\n",
+    "Crawl through 'Articles' folder\n",
+    "\n",
+    "Or just re-org into Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guardian-Hate.txt\n",
+      "Guardian-UK.txt\n",
+      "NYT-Hate.txt\n",
+      "NYT-NewYork.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "for root, dirs, files in os.walk('Articles'):\n",
+    "    for file in files:\n",
+    "        print(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nytrss = feedparser.parse(\n",
+    "        'https://www.nytimes.com/svc/collections/v1/publish/http://www.nytimes.com/topic/subject/hate-crimes/rss.xml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.nytimes.com/2017/04/26/opinion/after-hate-crimes-victims-stuck-with-the-bill.html'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nytrss['entries'][0]['link']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-15986d84974e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mnythate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0midlink\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnytrss\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'entries'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'link'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnytrss\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'entries'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'link'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_for_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import bs4\n",
+    "import feedparser\n",
+    "import pandas as pd\n",
+    "\n",
+    "# NY Times Hate Crimes feed\n",
+    "nytrss = feedparser.parse(\n",
+    "    'https://www.nytimes.com/svc/collections/v1/publish/http://www.nytimes.com/topic/subject/hate-crimes/rss.xml')\n",
+    "\n",
+    "nythate = {}\n",
+    "for i in range(5):\n",
+    "    idlink = nytrss['entries'][i]['link']\n",
+    "    res = requests.get(nytrss['entries'][i]['link'])\n",
+    "    res.raise_for_status()\n",
+    "    starch = bs4.BeautifulSoup(res.text, 'html5lib')\n",
+    "    # The below is specific to the NYT\n",
+    "    thetext = starch.find_all(class_='story-body-text')\n",
+    "    full = ''\n",
+    "    for tag in thetext:\n",
+    "        full += (tag.text.strip() + ' ')\n",
+    "    nythate[idlink] = full\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "build = pd.DataFrame.from_dict(nythate, orient='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/26/opinion/after-hate-crimes-victims-stuck-with-the-bill.html</th>\n",
+       "      <td>This Week in Hate highlights hate crimes and h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/21/world/europe/chechnya-russia-attacks-gays.html</th>\n",
+       "      <td>GROZNY, Russia — It was supposed to be a night...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/17/opinion/when-hate-leads-to-depression.html</th>\n",
+       "      <td>This Week in Hate highlights hate crimes and h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/13/world/europe/un-chechnya-gay-men-killing-abuse.html</th>\n",
+       "      <td>LONDON — United Nations experts demanded on Th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/06/world/europe/dutch-men-hold-hands.html</th>\n",
+       "      <td>From Amsterdam to New York, London to Havana, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                    0\n",
+       "https://www.nytimes.com/2017/04/26/opinion/afte...  This Week in Hate highlights hate crimes and h...\n",
+       "https://www.nytimes.com/2017/04/21/world/europe...  GROZNY, Russia — It was supposed to be a night...\n",
+       "https://www.nytimes.com/2017/04/17/opinion/when...  This Week in Hate highlights hate crimes and h...\n",
+       "https://www.nytimes.com/2017/04/13/world/europe...  LONDON — United Nations experts demanded on Th...\n",
+       "https://www.nytimes.com/2017/04/06/world/europe...  From Amsterdam to New York, London to Havana, ..."
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "build.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "build.columns = ['Text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "build['Source'] = 'New York Times'\n",
+    "build['Hate crime'] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Text</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Hate crime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/26/opinion/after-hate-crimes-victims-stuck-with-the-bill.html</th>\n",
+       "      <td>This Week in Hate highlights hate crimes and h...</td>\n",
+       "      <td>New York Times</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/21/world/europe/chechnya-russia-attacks-gays.html</th>\n",
+       "      <td>GROZNY, Russia — It was supposed to be a night...</td>\n",
+       "      <td>New York Times</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/17/opinion/when-hate-leads-to-depression.html</th>\n",
+       "      <td>This Week in Hate highlights hate crimes and h...</td>\n",
+       "      <td>New York Times</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/13/world/europe/un-chechnya-gay-men-killing-abuse.html</th>\n",
+       "      <td>LONDON — United Nations experts demanded on Th...</td>\n",
+       "      <td>New York Times</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>https://www.nytimes.com/2017/04/06/world/europe/dutch-men-hold-hands.html</th>\n",
+       "      <td>From Amsterdam to New York, London to Havana, ...</td>\n",
+       "      <td>New York Times</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                 Text  \\\n",
+       "https://www.nytimes.com/2017/04/26/opinion/afte...  This Week in Hate highlights hate crimes and h...   \n",
+       "https://www.nytimes.com/2017/04/21/world/europe...  GROZNY, Russia — It was supposed to be a night...   \n",
+       "https://www.nytimes.com/2017/04/17/opinion/when...  This Week in Hate highlights hate crimes and h...   \n",
+       "https://www.nytimes.com/2017/04/13/world/europe...  LONDON — United Nations experts demanded on Th...   \n",
+       "https://www.nytimes.com/2017/04/06/world/europe...  From Amsterdam to New York, London to Havana, ...   \n",
+       "\n",
+       "                                                            Source  Hate crime  \n",
+       "https://www.nytimes.com/2017/04/26/opinion/afte...  New York Times           1  \n",
+       "https://www.nytimes.com/2017/04/21/world/europe...  New York Times           1  \n",
+       "https://www.nytimes.com/2017/04/17/opinion/when...  New York Times           1  \n",
+       "https://www.nytimes.com/2017/04/13/world/europe...  New York Times           1  \n",
+       "https://www.nytimes.com/2017/04/06/world/europe...  New York Times           1  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "build.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "build.to_csv('NYT1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nytrss = feedparser.parse(\n",
+    "        'https://www.nytimes.com/svc/collections/v1/publish/https://www.nytimes.com/section/nyregion/rss.xml')\n",
+    "\n",
+    "nytnon = {}\n",
+    "for i in range(10):\n",
+    "    idlink = nytrss['entries'][i]['link']\n",
+    "    res = requests.get(nytrss['entries'][i]['link'])\n",
+    "    res.raise_for_status()\n",
+    "    starch = bs4.BeautifulSoup(res.text, 'html5lib')\n",
+    "    # The below is specific to the NYT\n",
+    "    thetext = starch.find_all(class_='story-body-text')\n",
+    "\n",
+    "    full = ''\n",
+    "    for tag in thetext:\n",
+    "        full += (tag.text.strip() + ' ')\n",
+    "\n",
+    "    nytnon[idlink] = full\n",
+    "\n",
+    "build = pd.DataFrame.from_dict(nytnon, orient='index')\n",
+    "build.columns = ['Text']\n",
+    "build['Source'] = 'New York Times'\n",
+    "build['Hate crime'] = 0\n",
+    "build.to_csv('NYT0.csv')"
    ]
   }
  ],
